[gd_scene load_steps=12 format=2]

[ext_resource path="res://units/enemies/bat/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://units/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://units/enemies/UnitDetectionZone.gd" type="Script" id=5]
[ext_resource path="res://units/healthbar bg.png" type="Texture" id=6]
[ext_resource path="res://units/healthbar front.png" type="Texture" id=7]
[ext_resource path="res://units/AttackRange.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=8]
radius = 152.21

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 24 )
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="HitboxPivot" type="Position2D" parent="."]
visible = false

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 4
damage = 2

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 5

[node name="UnitDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnitDetectionZone"]
shape = SubResource( 8 )

[node name="Healthbar" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
max_value = 20.0
value = 10.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]

[connection signal="area_entered" from="HitboxPivot/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="UnitDetectionZone" to="UnitDetectionZone" method="_on_UnitDetectionZone_body_entered"]
[connection signal="body_exited" from="UnitDetectionZone" to="UnitDetectionZone" method="_on_UnitDetectionZone_body_exited"]
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_entered" from="AttackRange" to="AttackRange" method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="AttackRange" method="_on_AttackRange_area_exited"]

[editable path="Hurtbox"]
[editable path="HitboxPivot/Hitbox"]
